--- a/index.html
+++ b/index.html
@@ -14,8 +14,19 @@
 		<div class="row">
 			<div class="col-xs-12 col-sm-12 col-md-8 col-md-offset-2 col-lg-8 col-lg-offset-2">
 				<div class="page-header">
-					<h1 class="text-center">Giphymaniac!</h1>
+					<h1 class="text-center">Giphy Generator</h1>
 				</div>
+				<div class="buttons"></div>
+				<form id="giphy-form">
+      				<label for="giphy-input">Create your gif</label>
+     				<input type="text" id="giphy-input"><br>
+					<input id="add-giphy" type="submit" value="Create your gif">
+    			</form>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-xs-12 col-sm-12 col-md-8 col-md-offset-2 col-lg-8 col-lg-offset-2">
+				<div class="jumbotron"></div>
 			</div>
 		</div>
 	</div>
