--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>Giphy</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<link href="https://fonts.googleapis.com/css?family=Press+Start+2P|VT323" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
 	<script type="text/javascript" src="giphy.js"></script>
@@ -16,8 +17,8 @@
 				<div class="page-header">
 					<h1 class="text-center">Giphy Generator</h1>
 				</div>
-				<div class="buttons"></div>
-				<form id="giphy-form">
+				<div class="buttons text-center"></div>
+				<form id="giphy-form" class="text-center">
       				<label for="giphy-input">Create your gif</label>
      				<input type="text" id="giphy-input"><br>
 					<input id="add-giphy" type="submit" value="Create your gif">
