--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 				<div class="page-header">
 					<h1 class="text-center font-effect-anaglyph">Giphy Generator</h1>
 				</div>
+				<div class="theme text-center">
+					<button id="theme-button" class="btn btn-warning btn-md"></button>
+				</div>
 				<div class="buttons text-center"></div>
 				<form id="giphy-form" class="text-center">
       				<label for="giphy-input" class="font-effect-anaglyph">Create your gif</label>
