--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 					<h1 class="text-center font-effect-anaglyph">Giphy Generator</h1>
 				</div>
 				<div class="theme text-center">
-					<button id="theme-button" class="btn btn-warning btn-md"></button>
+					<button id="theme-button" class="btn btn-danger btn-md"></button>
 				</div>
 				<div class="buttons text-center"></div>
 				<form id="giphy-form" class="text-center">
       				<label for="giphy-input" class="font-effect-anaglyph">Create your gif</label>
      				<input type="text" id="giphy-input"><br>
-					<button id="add-giphy" class="btn btn-warning btn-md" type="submit"><p>Generate Giphy</p></button>
+					<button id="add-giphy" class="btn btn-info btn-md" type="submit"><p>Generate Giphy</p></button>
     			</form>
 			</div>
 		</div>
