--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 					<h1 class="text-center font-effect-anaglyph">Giphy Generator</h1>
 				</div>
 				<div class="theme text-center">
-					<button id="theme-button" class="btn btn-danger btn-md"></button>
+					<button id="theme-button" class="btn btn-primary btn-md"></button>
 				</div>
 				<div class="buttons text-center"></div>
 				<form id="giphy-form" class="text-center">
